--- a/SokaJamur/app/src/main/res/layout/activity_daftar.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_daftar.xml
@@ -1,159 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d5d5d5">
 
-    <TextView
-        android:id="@+id/textlogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="163dp"
-        android:layout_marginStart="163dp"
-        android:layout_marginTop="16dp"
-        android:text="DAFTAR"
-        android:textSize="45dp"
-        android:fontFamily="@font/skranji_bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </ScrollView>
 
-    <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="402dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textlogin"
-        app:layout_constraintVertical_bias="0.68">
-
-        <EditText
-            android:id="@+id/isianNama"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="8dp"
-            android:ems="10"
-            android:hint="Nama"
-            android:inputType="text"
-            android:fontFamily="@font/skranji"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="232dp" />
-
-        <EditText
-            android:id="@+id/isianAlm"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:hint="Alamat"
-            android:inputType="text"
-            android:fontFamily="@font/skranji"
-            app:layout_constraintBottom_toTopOf="@+id/isianPass"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textlogin"
-            app:layout_constraintVertical_bias="0.77" />
-
-        <EditText
-            android:id="@+id/isianNo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:hint="No. Hp"
-            android:inputType="number"
-            android:fontFamily="@font/skranji"
-            app:layout_constraintBottom_toTopOf="@+id/isianPass"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textlogin"
-            app:layout_constraintVertical_bias="0.77" />
-
-        <EditText
-            android:id="@+id/isianEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="text"
-            android:fontFamily="@font/skranji"
-            app:layout_constraintBottom_toTopOf="@+id/isianPass"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textlogin"
-            app:layout_constraintVertical_bias="0.77" />
-
-        <EditText
-            android:id="@+id/isianPass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:fontFamily="@font/skranji"
-            app:layout_constraintBottom_toTopOf="@+id/isianPass"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textlogin"
-            app:layout_constraintVertical_bias="0.77"
-            tools:ignore="DuplicateIds" />
-
-        <Button
-            android:id="@+id/btndaftar"
-            android:layout_width="183dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="#6c6c6c"
-            android:fontFamily="@font/skranji_bold"
-            android:text="DAFTAR"
-            android:textColor="#ffffff"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.899"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/isianPass" />
+            app:layout_constraintTop_toBottomOf="@+id/textlogin"
+            app:layout_constraintVertical_bias="0.68">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textlogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/skranji_bold"
+                android:text="DAFTAR"
+                android:textAlignment="center"
+                android:textSize="45dp"
+                tools:layout_editor_absoluteY="16dp" />
 
-</android.support.constraint.ConstraintLayout>
+            <EditText
+                android:id="@+id/isianNama"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="8dp"
+                android:ems="10"
+                android:fontFamily="@font/skranji"
+                android:hint="Nama"
+                android:inputType="text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="232dp" />
+
+            <EditText
+                android:id="@+id/isianAlm"
+                android:layout_width="330dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:fontFamily="@font/skranji"
+                android:hint="Alamat"
+                android:inputType="text"
+                app:layout_constraintBottom_toTopOf="@+id/isianPass"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textlogin"
+                app:layout_constraintVertical_bias="0.77" />
+
+            <EditText
+                android:id="@+id/isianNo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:fontFamily="@font/skranji"
+                android:hint="No. Hp"
+                android:inputType="number"
+                app:layout_constraintBottom_toTopOf="@+id/isianPass"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textlogin"
+                app:layout_constraintVertical_bias="0.77" />
+
+            <EditText
+                android:id="@+id/isianEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:fontFamily="@font/skranji"
+                android:hint="Email"
+                android:inputType="text"
+                app:layout_constraintBottom_toTopOf="@+id/isianPass"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textlogin"
+                app:layout_constraintVertical_bias="0.77" />
+
+            <EditText
+                android:id="@+id/isianPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:fontFamily="@font/skranji"
+                android:hint="Password"
+                android:inputType="textPassword"
+                app:layout_constraintBottom_toTopOf="@+id/isianPass"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textlogin"
+                app:layout_constraintVertical_bias="0.77"
+                tools:ignore="DuplicateIds" />
+
+            <Button
+                android:id="@+id/btndaftar"
+                android:layout_width="183dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="#6c6c6c"
+                android:fontFamily="@font/skranji_bold"
+                android:text="DAFTAR"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@+id/textView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.899"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/isianPass" />
+
+        </LinearLayout>
+    </ScrollView>
+
