--- a/SokaJamur/app/src/main/res/layout/app_bar_home_admin.xml
+++ b/SokaJamur/app/src/main/res/layout/app_bar_home_admin.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#d5d5d5"
-    tools:context="com.reppernews.sokajamur.HomeActivity">
+    tools:context="com.reppernews.sokajamur.HomeAdmin">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_home" />
+    <include layout="@layout/content_home_admin" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
